--- a/nino/package.json
+++ b/nino/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-community/datetimepicker": "^8.5.1",
     "@react-navigation/bottom-tabs": "^7.8.9",
     "@react-navigation/native": "^7.1.22",
     "@react-navigation/native-stack": "^7.8.3",
