--- a/nino/app.json
+++ b/nino/app.json
@@ -1,30 +1,34 @@
 {
   "expo": {
-    "name": "nino",
+    "name": "Nino",
     "slug": "nino",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
+    "newArchEnabled": false,
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#e66430"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.nino.app"
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "package": "com.nino.app"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "owner": "hfaaf",
+    "extra": {
+      "eas": {
+        "projectId": "e674966a-fa1c-435a-862b-ec5545bf4a50"
+      }
+    },
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
