--- a/nino/package.json
+++ b/nino/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/datetimepicker": "^8.5.1",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.8.9",
     "@react-navigation/native": "^7.1.22",
     "@react-navigation/native-stack": "^7.8.3",
     "expo": "~54.0.25",
     "expo-checkbox": "~5.0.7",
+    "expo-font": "~14.0.10",
     "expo-image-picker": "~17.0.9",
     "expo-linear-gradient": "~15.0.7",
     "expo-location": "~19.0.8",
@@ -32,7 +33,6 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "@types/react-native": "^0.72.8",
     "typescript": "~5.9.2"
   },
   "private": true
